Add link to stylesheet

--- a/template.html
+++ b/template.html
@@ -1,5 +1,7 @@
 <html>
 <head><meta charset="UTF-8">
-	<title>Contrapunctus</title></head>
+	<title>Contrapunctus</title>
+	<link rel="stylesheet" href="styles/main.css">
+</head>
 <body>◊(->html doc)</body>
 </html>
