Fix dumb quotes

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 					<li><a href="first_species_exercises.html">First Species
 							Exercises</a></li>
 					<li><a href="conclusion.html">Conclusion</a></li>
-					<li><a href="things.html">Things I Didn't Talk About But
+					<li><a href="things.html">Things I Didn’t Talk About But
 							Maybe Should Have</a></li>
 				</ol>
         </div>
