--- a/template.html
+++ b/template.html
@@ -1,7 +1,7 @@
 <html>
 <head><meta charset="UTF-8">
-	<meta name="viewport" content="width=device-width"
-	><title>Contrapunctus</title>
+	<meta name="viewport" content="width=device-width">
+	<title>Contrapunctus</title>
 	<link rel="stylesheet" href="styles/main.css">
 </head>
 <body>
