Make edits with Ellen

--- a/index.html
+++ b/index.html
@@ -9,14 +9,13 @@
 <p>The First Steps towards the Ancient Style<h2></p>
 				<ol>
 					<li><a href="introduction.html">Introduction</a></li>
-					<li><a href="intervals.html">Intervals</a></li>
+					<li><a href="intervals.html">Pitches and Intervals</a></li>
 					<li><a href="consonance_and_dissonance.html">Consonance and
 							Dissonance</a></li>
 					<li><a href="motion.html">Motion</a></li>
 					<li><a href="first_species.html">First Species</a></li>
 					<li><a href="first_species_exercises.html">First Species
 							Exercises</a></li>
-					<li><a href="conclusion.html">Conclusion</a></li>
 					<li><a href="things.html">Things I Didn’t Talk About But
 							Maybe Should Have</a></li>
 				</ol>
